improve layout to match figma wireframe, fix track width in alignment with input fields, implement removeTrack function

--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,6 @@ body {
 }
 
 .header {
-    border: 2px solid red;
-
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -60,5 +58,107 @@ body {
     width: 100%;
     height: 150px;
     text-align: center;
-    z-index: 1000; /* Ensure header is above other content */
+    z-index: 1000;
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #121212;
+    color: white;
+}
+
+.header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.content {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    gap: 50px;
+}
+
+.search-side, .playlist-side {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+    max-width: 50%;
+    min-width: 50%;
+}
+
+input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 100px;
+    background-color: #333;
+    color: white;
+    flex-shrink: 0;
+}
+
+.search-results, .playlist {
+    flex: 1;
+    overflow-y: auto;
+}
+
+.track {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #1e1e1e;
+    border-radius: 4px;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+.track img.track-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 4px;
+}
+
+.track-info {
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.track-title, .track-artist {
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.track-artist {
+    font-size: 0.8em;
+}
+
+.track-duration {
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+
+.track-add-button, .track-remove-button {
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 50%;
+    font-size: 15px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.track-add-button:hover, .track-remove-button:hover {
+    padding: 9px 13px;
 }
